2010-12-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-font): Colorize the region.
	(shr-tag-body): Ditto.
	(shr-tag-font): Actually let the styles be inherited instead of
	overwriting them.

	* gnus-int.el (gnus-request-thread): Rework to take a header instead of
	a Message-ID to avoid having nnimap depend on gnus-sum.

	* shr.el (shr-descend): Only colorize something if we have a node that
	sets colors.

2010-12-06  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-render-td): Render td content with shr-descend, so style
	will be applied to <td> too.
	(shr-colorize-region): Colorize region even if we only have a background.
	(shr-tag-body): Fix color and background color inheritance.
	Do not recolorize after shr-generic.
	(shr-tag-font): Let shr-generic colorize via inheritance.

2010-12-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-find-fill-point): Don't regard apostrophe as kinsoku-bol.

2010-12-06  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-request-move-article): Remove obsolete code.

2010-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-macroexpand-all): Use eval-and-compile.

2010-12-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-respool-article): The completion function
	expects a list instead of an alist.

	* nntp.el (nntp-snarf-error-message): nnheader-report takes a format
	string as the parameter.

	* gnus.el (gnus-valid-select-methods): Allow nnimap to respool.

	* shr.el (shr-stylesheet): New dynamic variable for cascading the
	styles.
	(shr-colorize-region): New function.
	(shr-insert-background-overlay): Remove.
	(shr-render-td): Background setting should be taken care of on a higher
	level.
	(shr-tag-body): Use post-hoc colorizations.
	(shr-tag-body): Set up a style sheet based on bgcolor/fgcolor.
	(shr-put-color-1): Don't overwrite old colors.
	(shr-colorize-region): When the background color isn't explicit, use
	a fixed background.
